Fix for blurry zoomed images in Google Chrome

--- a/css/less/07-effects-box-text.less
+++ b/css/less/07-effects-box-text.less
@@ -86,13 +86,13 @@
 }
 
 .enlarge {
-	-webkit-transform: scale(1.25);
-	transform: scale(1.25);
+	-webkit-transform: scale(1.25) translateZ(0);
+	transform: scale(1.25) translateZ(0);
 }
 
 .shrink {
-	-webkit-transform: scale(0.8);
-	transform: scale(0.8);	
+	-webkit-transform: scale(0.8) translateZ(0);
+	transform: scale(0.8) translateZ(0);	
 }
 
 .rotate-0 {
